<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.drxgb</groupId>
	<artifactId>ratracker</artifactId>
	<version>1.1.0</version>
	<name>XGB's RetroAchievements Tracker</name>
	<description>Achievements tracker that consumes the RetroAchievements API.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>23.0.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>23.0.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>23.0.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/javax.json/javax.json-api -->
		<dependency>
			<groupId>javax.json</groupId>
			<artifactId>javax.json-api</artifactId>
			<version>1.1.4</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.json -->
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>jakarta.json</artifactId>
			<version>1.1.6</version>
		</dependency>


		<!-- XGB Utils -->
		<dependency>
			<groupId>com.drxgb</groupId>
			<artifactId>utils</artifactId>
			<version>1.10.3</version>
		</dependency>

		<!-- XGB JavaFX Utils -->
		<dependency>
			<groupId>com.drxgb</groupId>
			<artifactId>javafx-utils</artifactId>
			<version>1.7.4</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<outputDirectory>${project.build.outputDirectory}\resources</outputDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>